--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 15px;
+  margin-bottom: 8px;
 }
 
 .flex-items{
@@ -19,54 +19,26 @@
 .location-wrapper{
   display: flex;
   flex-direction: column;
-  /* background-color: red; */
+  width: 400px;
 }
 
 .location{
   display: flex;
   flex-direction: row;
-}
-
-.search-box{
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: 327px;
-  height: 45px;
-  padding: 10px;
-  background-color: #FFFFFF;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
-  border-radius: 8px;
-  /* background-color: red; */
 
 }
-form{
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-button{
-  background-color: transparent;
-  border: none;
-  margin-right: 10px;
-  cursor: pointer;
-}
-#input-field{
-  background-color: transparent;
-  font-size: medium;
-  border: none;
-  font-style: italic;
-}
-#input-field:focus{
-  outline: none;
+.Geolocation{
+  color:#606060;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  margin-top: 8px;
 }
 
 .card-label{
   height: 260px;
   width: 140px;
-  margin-top: 20px;
+  margin-top: 25px;
   margin-right: 15px;
   display: flex;
   flex-direction: column;
@@ -111,11 +83,14 @@ button{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0px 20px;
+    padding: 0px 10px;
   }
   .navbar-right{
     display: flex;
     flex-direction: column;
+    border-left: 1px solid rgba(255, 255, 255, 0.14);
+    padding-left: 5px;
+    padding-top: 3px;
   }
   .container{
     margin: 35px 20px;
@@ -127,8 +102,7 @@ button{
   .location-wrapper{
     margin-top: 20px;
   }
-  .search-box{
+  .flex-items{
     width: 100%;
-    padding: 15px;
   }
 }
